attemps to get lab2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ target_compile_options(v2 PRIVATE --warn-no-missing-field-initializers -Wextra -
 target_compile_options(v2.1 PRIVATE --warn-no-missing-field-initializers -Wextra -Wshadow -Wpedantic)
 target_compile_options(v2.2 PRIVATE --warn-no-missing-field-initializers -Wextra -Wshadow -Wpedantic)
 target_compile_options(v2.3 PRIVATE --warn-no-missing-field-initializers -Wextra -Wshadow -Wpedantic)
+target_compile_options(v2.4 PRIVATE --warn-no-missing-field-initializers -Wextra -Wshadow -Wpedantic)
 
 target_include_directories(v1.5 PRIVATE ${LIKWID_INCLUDE_DIRS}) # these are for likwid benchmarking
 target_link_libraries(v1.5 PRIVATE ${LIKWID_LIBRARIES})
@@ -81,7 +82,7 @@ target_link_libraries(v1.5 PRIVATE ${LIKWID_LIBRARIES})
 target_compile_definitions(v1.5 PRIVATE LIKWID_PERFMON)
 
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -march=native")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -g -DNDEBUG -march=native -fopt-info-vec")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -g -DNDEBUG -march=native ") #-fopt-info-vec
 #no vector test
 #set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -g -DNDEBUG -march=native -fno-tree-vectorize -fopt-info-vec")
 #set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -g -DNDEBUG -march=native -fopt-info-vec -fno-strict-aliasing")
